--- a/Notebooks_EN/01_Linear_Algebra/02_Systems_of_Linear_Equations/LA_SoLE_Gauss_en.ipynb
+++ b/Notebooks_EN/01_Linear_Algebra/02_Systems_of_Linear_Equations/LA_SoLE_Gauss_en.ipynb
@@ -506,13 +506,13 @@
       ],
       "metadata": {
         "id": "JCHrcZ9Un_bA",
-        "outputId": "d3add6f5-eef1-4751-cb18-6151e2f608dc",
+        "outputId": "4e797ed1-cde6-42fc-918b-adfe9fd0a30b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 152
         }
       },
-      "execution_count": null,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "display_data",
@@ -884,9 +884,9 @@
           "height": 177
         },
         "id": "xxKiklvrUklH",
-        "outputId": "3fae91c7-aaf7-4098-833f-cd49a454997f"
+        "outputId": "ce2436e8-8bfc-4ee6-ea36-81f602cb1767"
       },
-      "execution_count": null,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "display_data",
@@ -923,17 +923,17 @@
     {
       "cell_type": "code",
       "source": [
-        "g.add_row(4,2,-2)"
+        "g.add_row(2,1,-2)"
       ],
       "metadata": {
+        "id": "VJ_662got7oJ",
+        "outputId": "74504fbf-b951-4d3c-9dff-ab44bd1702d4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 177
-        },
-        "id": "2o18WkAOVnA1",
-        "outputId": "bb5161f3-3d6c-411c-a3c7-93cae1ff6d3a"
+        }
       },
-      "execution_count": null,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "display_data",
@@ -941,7 +941,7 @@
             "text/plain": [
               "<IPython.core.display.Markdown object>"
             ],
-            "text/markdown": "**Operation:** r4 = r4 + -2*r2"
+            "text/markdown": "**Operation:** r2 = r2 + -2*r1"
           },
           "metadata": {}
         },
@@ -961,7 +961,7 @@
             "text/plain": [
               "<IPython.core.display.Markdown object>"
             ],
-            "text/markdown": "$$\\begin{aligned} 1 x + 1 y + 1 z - 1 t = 2 \\\\ 2 x + 1 y + 1 z +0 t = 3 \\\\ - 1 x +0 y + 1 z - 1 t = 0 \\\\ - 1 x +0 y - 3 z + 2 t = -7 \\end{aligned}$$"
+            "text/markdown": "$$\\begin{aligned} 1 x + 1 y + 1 z - 1 t = 2 \\\\ 0 x - 1 y - 1 z + 2 t = -1 \\\\ - 1 x +0 y + 1 z - 1 t = 0 \\\\ 3 x + 2 y - 1 z + 2 t = -1 \\end{aligned}$$"
           },
           "metadata": {}
         }
@@ -970,17 +970,17 @@
     {
       "cell_type": "code",
       "source": [
-        "g.add_row(4,3,-1)"
+        "g.add_row(3,1,1)"
       ],
       "metadata": {
+        "id": "pSRJc8FguJrD",
+        "outputId": "b5ad8b7f-f624-4346-da54-54328d6d0edc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 177
-        },
-        "id": "wnHUYghNV467",
-        "outputId": "f2127831-98a9-4a74-d624-f925c78ac370"
+        }
       },
-      "execution_count": null,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "display_data",
@@ -988,7 +988,7 @@
             "text/plain": [
               "<IPython.core.display.Markdown object>"
             ],
-            "text/markdown": "**Operation:** r4 = r4 + -1*r3"
+            "text/markdown": "**Operation:** r3 = r3 + 1*r1"
           },
           "metadata": {}
         },
@@ -1008,7 +1008,101 @@
             "text/plain": [
               "<IPython.core.display.Markdown object>"
             ],
-            "text/markdown": "$$\\begin{aligned} 1 x + 1 y + 1 z - 1 t = 2 \\\\ 2 x + 1 y + 1 z +0 t = 3 \\\\ - 1 x +0 y + 1 z - 1 t = 0 \\\\ 0 x +0 y - 4 z + 3 t = -7 \\end{aligned}$$"
+            "text/markdown": "$$\\begin{aligned} 1 x + 1 y + 1 z - 1 t = 2 \\\\ 0 x - 1 y - 1 z + 2 t = -1 \\\\ 0 x + 1 y + 2 z - 2 t = 2 \\\\ 3 x + 2 y - 1 z + 2 t = -1 \\end{aligned}$$"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "g.add_row(4,1,-3)"
+      ],
+      "metadata": {
+        "id": "ZxBg0-u0uPYt",
+        "outputId": "388f8cca-4343-4578-d2fa-82222c7b53d3",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 177
+        }
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "**Operation:** r4 = r4 + -3*r1"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "System of equations:"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "$$\\begin{aligned} 1 x + 1 y + 1 z - 1 t = 2 \\\\ 0 x - 1 y - 1 z + 2 t = -1 \\\\ 0 x + 1 y + 2 z - 2 t = 2 \\\\ 0 x - 1 y - 4 z + 5 t = -7 \\end{aligned}$$"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "g.add_row(4,3,1)"
+      ],
+      "metadata": {
+        "id": "kODY-cnJuUOw",
+        "outputId": "0c487dcf-c79c-41db-89b7-2c95dc6fb899",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 177
+        }
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "**Operation:** r4 = r4 + 1*r3"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "System of equations:"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "$$\\begin{aligned} 1 x + 1 y + 1 z - 1 t = 2 \\\\ 0 x - 1 y - 1 z + 2 t = -1 \\\\ 0 x + 1 y + 2 z - 2 t = 2 \\\\ 0 x +0 y - 2 z + 3 t = -5 \\end{aligned}$$"
           },
           "metadata": {}
         }
@@ -1020,14 +1114,14 @@
         "g.add_row(3,2,1)"
       ],
       "metadata": {
+        "id": "52O-eR1fuj1C",
+        "outputId": "be961cc9-9c0d-48f6-9c09-7cb92c691f32",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 177
-        },
-        "id": "aTqxfhiEWCTf",
-        "outputId": "8471b968-fc64-43e0-bb9f-a40b44c31eee"
+        }
       },
-      "execution_count": null,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1055,7 +1149,7 @@
             "text/plain": [
               "<IPython.core.display.Markdown object>"
             ],
-            "text/markdown": "$$\\begin{aligned} 1 x + 1 y + 1 z - 1 t = 2 \\\\ 2 x + 1 y + 1 z +0 t = 3 \\\\ 1 x + 1 y + 2 z - 1 t = 3 \\\\ 0 x +0 y - 4 z + 3 t = -7 \\end{aligned}$$"
+            "text/markdown": "$$\\begin{aligned} 1 x + 1 y + 1 z - 1 t = 2 \\\\ 0 x - 1 y - 1 z + 2 t = -1 \\\\ 0 x +0 y + 1 z +0 t = 1 \\\\ 0 x +0 y - 2 z + 3 t = -5 \\end{aligned}$$"
           },
           "metadata": {}
         }
@@ -1064,17 +1158,17 @@
     {
       "cell_type": "code",
       "source": [
-        "g.add_row(3,1,-1)"
+        "g.add_row(4,3,2)"
       ],
       "metadata": {
+        "id": "VdMFnSKZuoQ8",
+        "outputId": "c7b8105e-1ed9-4b02-bfc9-70f7e9f9d778",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 177
-        },
-        "id": "jyVP97sIWJhf",
-        "outputId": "5577f598-6895-493d-ead9-097d1dc4b587"
+        }
       },
-      "execution_count": null,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1082,7 +1176,7 @@
             "text/plain": [
               "<IPython.core.display.Markdown object>"
             ],
-            "text/markdown": "**Operation:** r3 = r3 + -1*r1"
+            "text/markdown": "**Operation:** r4 = r4 + 2*r3"
           },
           "metadata": {}
         },
@@ -1102,54 +1196,7 @@
             "text/plain": [
               "<IPython.core.display.Markdown object>"
             ],
-            "text/markdown": "$$\\begin{aligned} 1 x + 1 y + 1 z - 1 t = 2 \\\\ 2 x + 1 y + 1 z +0 t = 3 \\\\ 0 x +0 y + 1 z +0 t = 1 \\\\ 0 x +0 y - 4 z + 3 t = -7 \\end{aligned}$$"
-          },
-          "metadata": {}
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "g.add_row(4,3,4)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 177
-        },
-        "id": "1yRW3Q5gWU2h",
-        "outputId": "dffc4a5a-e1c0-4260-dd96-5f1e4e4ab09e"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.Markdown object>"
-            ],
-            "text/markdown": "**Operation:** r4 = r4 + 4*r3"
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.Markdown object>"
-            ],
-            "text/markdown": "System of equations:"
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.Markdown object>"
-            ],
-            "text/markdown": "$$\\begin{aligned} 1 x + 1 y + 1 z - 1 t = 2 \\\\ 2 x + 1 y + 1 z +0 t = 3 \\\\ 0 x +0 y + 1 z +0 t = 1 \\\\ 0 x +0 y +0 z + 3 t = -3 \\end{aligned}$$"
+            "text/markdown": "$$\\begin{aligned} 1 x + 1 y + 1 z - 1 t = 2 \\\\ 0 x - 1 y - 1 z + 2 t = -1 \\\\ 0 x +0 y + 1 z +0 t = 1 \\\\ 0 x +0 y +0 z + 3 t = -3 \\end{aligned}$$"
           },
           "metadata": {}
         }
@@ -1168,7 +1215,7 @@
       "metadata": {
         "id": "830WKPGnW7Im"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1183,7 +1230,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1204,13 +1251,13 @@
       ],
       "metadata": {
         "id": "8LNVIQrDaFDq",
-        "outputId": "5f76da83-2600-49e3-8683-15dfa1426dde",
+        "outputId": "00d423af-813d-4a85-e438-f8e58fa3b45b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 177
         }
       },
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "display_data",
