--- a/Notebooks_EN/01_Linear_Algebra/03_Vectors/LA_Vectors_projections.ipynb
+++ b/Notebooks_EN/01_Linear_Algebra/03_Vectors/LA_Vectors_projections.ipynb
@@ -63,10 +63,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "NGHTGkts0pKY",
-        "outputId": "df420ecb-5e32-4b16-b125-63e5f1768951",
+        "outputId": "8340bfb5-af01-41d8-c88c-02fa35128e9a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 564
@@ -310,23 +310,47 @@
         "BxB=2\n"
       ],
       "metadata": {
-        "id": "qeZsFYoyWO_2",
-        "outputId": "6ed63703-f6c2-4096-b90b-c2194a87946a",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "qeZsFYoyWO_2"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "B8esxlrJeoHp"
       },
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "(a.dot(b)*b)/b.dot(b)"
+      ],
+      "metadata": {
+        "id": "yWRf47fSeDzl",
+        "outputId": "a62c3814-8e4d-44d8-b821-888d807592b8",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 58
+        }
+      },
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "True"
-            ]
+              "Matrix([\n",
+              "[5/2],\n",
+              "[5/2]])"
+            ],
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}\\frac{5}{2}\\\\\\frac{5}{2}\\end{matrix}\\right]$"
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 4
         }
       ]
     },
@@ -383,6 +407,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Project vector  b=(1,1)  onto vector  a=(2,3) . Illustrate the result on a graph."
+      ],
+      "metadata": {
+        "id": "MQRKil-HZGbx"
+      }
     },
     {
       "cell_type": "code",
